--- a/index.html
+++ b/index.html
@@ -8,38 +8,23 @@
 <body>
     <h1>Conexión entre C++ y HTML</h1>
     <form id="miFormulario">
-        <!--input type="number" id="num1" placeholder="Número 1" required-->
-        <!--input type="number" id="num2" placeholder="Número 2" required-->
-
-        Nombre: <input type="text" id="nombre" placeholder="Introduce tu nombre">
-
-        <!--
-        <p><input type="checkbox"> Opción A</p>
-        <p><input type="checkbox"> Opción B</p>
-        <p><input type="checkbox"> Opción C</p>
-
-        <p><input type="radio" name="el001"> Elección 1</p>
-        <p><input type="radio" name="el001"> Elección 2</p>
-        <p><input type="radio" name="el001"> Elección 3</p>
-
-        <textarea></textarea>
-
-        <select>
-            <option>Comer fuera</option>
-            <option>Cocinar en casa</option>
-            <option>Pedir un Glovo</option>
-            <option>No comer</option>
-        </select>
-        -->
-
-        <input type="submit" value="Enviar">
-
-        <button type="submit">Enviar</button>
-
+        <input type="number" id="num1" placeholder="Número 1" required>
+        <input type="number" id="num2" placeholder="Número 2" required>
+        <button type="submit">Sumar</button>
     </form>
+    <div id="resultado"></div>
 
-    <div id="resultado">No se ha iniciado sesión</div>
+    <script>
+        document.getElementById('miFormulario').onsubmit = async function (e) {
+            e.preventDefault();
 
-    <script src="main.js"></script>
+            num1 = document.getElementById('num1').value;
+            num2 = document.getElementById('num2').value;
+
+            response = await fetch(`/cgi-bin/funciones.cgi?num1=${num1}&num2=${num2}`);
+            data = await response.text();
+            document.getElementById('resultado').innerText = `Resultado: ${data}`;
+        };
+    </script>
 </body>
 </html>
